# ipvanish-client

./: .gitignore  IPVanish.desktop  README.md  ipvanish  linux_install.sh  pyproject.toml
assets/: color-palette.txt
core/: config_parser.py  connection.py  downloader.py  favorites.py  geo.py  profiles.py  servers.py  tunnel_monitor.py
core/backends/: __init__.py  base.py  openvpn_backend.py  wireguard_backend.py
daemon/: ipvanish-widget-daemon.py  ipvanish-widget-daemon.service
docs/: themes.txt
plasmoid/: install-widget.sh
plasmoid/com.ditherz.ipvanish/: metadata.json
plasmoid/com.ditherz.ipvanish/contents/ui/: CardLayout.qml  GlassBackground.qml  PillLayout.qml  SidebarLayout.qml  SpeedBars.qml  main.qml
tests/: test_backends.py  test_daemon.py  test_profiles.py
tools/: vpn_benchmark.py
ui/: main_window.py  theme.qss
ui/themes/: dark.qss
ui/widgets/: configs_tab.py  credentials_tab.py  dashboard.py  server_list.py  status_panel.py
